# advent-of-code

./: .gitignore  README.md  bb.edn  deps.edn  pyproject.toml  readme.org  tests.edn
.clj-kondo/: config.edn
examples/python/: imaging.py  matplotlib_example_complex_numbers.py  numpy_examples.py  timing_tqdm.py
resources/templates/: readme.org  src.clj  src.py  test.clj  test.py
script/: tasks.clj
src/: utils.clj
src/aoc/: coll_util.clj  file_util.clj  math.clj  string_util.clj
src/aoc/2023/: core.clj
src/aoc/2023/day_08/: core.clj  core_richards.clj
src/aoc/2023/day_09/: core.clj  try_me.clj
src/aoc/2023/day_10/: Day 10 - Advent of Code 2023.html  core.clj  readme-10.org
src/aoc/2023/day_11/: Day 11 - Advent of Code 2023.html  core.clj  readme-11.org
src/aoc/2024/day_01/: core.clj  day_01.py
src/aoc/2024/day_02/: core.clj  problem.org  puzzle.py  puzzle_test.py
src/aoc/2024/day_03/: core.clj  problem.org  puzzle.py  puzzle_test.py
src/aoc/2024/day_04/: problem.org  puzzle.py
src/aoc/pyutils/: file_utils.py  grid.py  grid_points.py  grid_pydantic.py  position.py  puzzle_map.py  utils.py
src/aoc/yr_2024/day_05/: problem.org  puzzle.py  readme.org
src/aoc/yr_2024/day_06/: output.txt  puzzle.py  puzzle_2.bkp.py  puzzle_2.py  readme.org  test_data_2.txt  test_data_3.txt  test_data_4.txt  test_data_missing_loop.txt  test_data_template.txt
src/aoc/yr_2024/day_07/: problem.org  puzzle.py
src/aoc/yr_2024/day_08/: problem.org  puzzle.py
src/aoc/yr_2024/day_09/: problem.org  puzzle.py  test_data.py
src/aoc/yr_2024/day_10/: problem.org  puzzle.py
src/aoc/yr_2024/day_11/: problem.org  profile_results_1.txt  profile_results_2.txt  puzzle.py
src/aoc/yr_2024/day_12/: puzzle.py  readme.org
src/aoc/yr_2024/day_13/: puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_14/: puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_15/: puzzle.py  puzzle_test.py  readme.org  test_data_short.txt
src/aoc/yr_2024/day_16/: learn_deques.py  puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_17/: puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_18/: puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_19/: puzzle.py  puzzle_test.py  readme.org  reddit_1.py  reddit_2.py  reddit_3.py  reddit_4.py
src/aoc/yr_2024/day_20/: puzzle.py  puzzle_test.py  readme.org
src/aoc/yr_2024/day_21/: bad_code.py  puzzle.py  puzzle_test.py  readme.org  reddit_1.py  reddit_2.py  scratch.py  timing_tqdm.py
src/aoc/yr_2024/day_22/: puzzle.py  puzzle_test.py  readme.org
src/tools/: README.org  fetch.clj  utils.clj
test/aoc/: coll_util_test.clj  math_test.clj  string_util_test.clj
test/aoc/2023/day_01/: core_test.clj
test/aoc/2023/day_02/: core_test.clj
test/aoc/2023/day_03/: core_test.clj
test/aoc/2023/day_04/: core_test.clj
test/aoc/2023/day_05/: core_test.clj
(+8 files in other folders)
