[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pip>=24.3.1",
    "pylint>=3.3.2",
    "pyright[all]>=1.1.389",
    "pytest>=8.3.4",
    "python-lsp-server>=1.12.0",
    "requests>=2.32.3",
    "rich[jupyter]>=13.9.4",
    "ruff>=0.8.1",
    "typer>=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
